# vsc

./: CMakeLists.txt
src/: main.cpp
